--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
   text-align: center;
 }
 
+.hero_section {
+  background-image: url('hero-meals.png');
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
