--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -174,6 +174,7 @@
 #login-bg {
     background: url(/login.jpg);
 }
+    
 /* Common Classes */
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
@@ -182,3 +183,6 @@ input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
 }
  
+#login-bg {
+    background: url(/login.jpg);
+}
